--- a/app/assets/stylesheets/font-awesome.css.erb
+++ b/app/assets/stylesheets/font-awesome.css.erb
@@ -9,6 +9,10 @@
 //= depend_on_asset "fontawesome-webfont.woff"
 //= depend_on_asset "fontawesome-webfont.ttf"
 //= depend_on_asset "fontawesome-webfont.svg"
+//= depend_on_asset "fontawesome-corp-webfont.eot"
+//= depend_on_asset "fontawesome-corp-webfont.woff"
+//= depend_on_asset "fontawesome-corp-webfont.ttf"
+//= depend_on_asset "fontawesome-corp-webfont.svg"
 <% v = FontAwesome::Rails::FA_VERSION %>
 @font-face {
   font-family: 'FontAwesome';
@@ -17,6 +21,14 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face{
+  font-family:'Font-Awesome-Corp';
+  src: url('<%= font_path('fontawesome-corp-webfont.eot') %>?v=<%= v %>');
+  src: url('<%= font_path('fontawesome-corp-webfont.eot') %>?#iefix&v=<%= v %>') format('embedded-opentype'), url('<%= font_path('fontawesome-corp-webfont.woff') %>?v=<%= v %>') format('woff'), url('<%= font_path('fontawesome-corp-webfont.ttf') %>?v=<%= v %>') format('truetype'), url('<%= font_path('fontawesome-corp-webfont.svg') %>?v=<%= v %>#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+  
 .fa {
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
@@ -1805,3 +1817,22 @@
 .fa-medium:before {
   content: "\f23a";
 }
+
+.fa-amazon-sign:before,.fa-amazon:before,.fa-android-more:before,.fa-apple-itunes:before,.fa-apple-more:before,.fa-aws:before,.fa-bing-sign:before,.fa-bing:before,.fa-duck-duck-go:before,.fa-google-sign:before,.fa-google:before,.fa-sparrow-sign:before,.fa-sparrow:before,.fa-windows-more:before,.fa-windows8:before,.fa-yahoo:before{font-family:'Font-Awesome-Corp';speak:none;font-style:normal;font-weight:normal;text-decoration:inherit;-webkit-font-smoothing:antialiased;display:inline;width:auto;height:auto;line-height:normal;vertical-align:baseline;background-image:none;background-position:0% 0%;background-repeat:repeat;margin-top:0;}
+.fa-amazon-sign:before{content:"\f340";}
+.fa-amazon:before{content:"\f341";}
+.fa-android-more:before{content:"\f342";}
+.fa-apple-itunes:before{content:"\f343";}
+.fa-apple-more:before{content:"\f344";}
+.fa-aws:before{content:"\f345";}
+.fa-bing-sign:before{content:"\f346";}
+.fa-bing:before{content:"\f347";}
+.fa-duck-duck-go:before{content:"\f348";}
+.fa-google-sign:before{content:"\f349";}
+.fa-google:before{content:"\f34a";}
+.fa-sparrow-sign:before{content:"\f34b";}
+.fa-sparrow:before{content:"\f34c";}
+.fa-windows-more:before{content:"\f34d";}
+.fa-windows8:before{content:"\f34e";} 
+.fa-yahoo:before{content:"\f34f";}
+
